Implement proper chest boat protection. Part of #1987